--- a/res/layout/namo_ad_item.xml
+++ b/res/layout/namo_ad_item.xml
@@ -17,8 +17,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_toRightOf="@id/namo_ad_image"
-    android:lines="2"
+    android:lines="3"
     android:textAppearance="?android:attr/textAppearanceMedium"
+    android:text="Sample ad text. This text will be adapted to match your TextView size."
     android:textStyle="bold" />
 
   <ImageView
@@ -50,7 +51,7 @@
       android:layout_height="wrap_content"
       android:gravity="center_vertical"
       android:singleLine="true"
-      android:text="Sponsored"
+      android:text="Sponsored by:"
       android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
@@ -60,6 +61,7 @@
       android:gravity="center_vertical"
       android:singleLine="true"
       android:textAppearance="?android:attr/textAppearanceSmall"
+      android:text="Sample advertiser name"
       android:textStyle="bold" />
 
     <View
